@@ -1,5 +1,5 @@
 /*
- * Copyright 2022 the original author or authors.
+ * Copyright 2024 the original author or authors.
  * <p>
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,10 +18,10 @@ package org.openrewrite.hcl.search;
 import lombok.EqualsAndHashCode;
 import lombok.Value;
 import org.junit.jupiter.api.Test;
+import org.openrewrite.DocumentExample;
 import org.openrewrite.Recipe;
 import org.openrewrite.test.RewriteTest;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.openrewrite.hcl.Assertions.hcl;
@@ -29,25 +29,26 @@ import static org.openrewrite.hcl.Assertions.hcl;
 class FindAndReplaceLiteralTest implements RewriteTest {
 
     @Test
+    @DocumentExample
     void defaultNonRegexReplace() {
         rewriteRun(
-          spec -> spec.recipe( new FindAndReplaceLiteral("app-cluster", "new-app-cluster", null, null, null, null, null)),
+          spec -> spec.recipe(new FindAndReplaceLiteral("app-cluster", "new-app-cluster", null, null, null, null, null)),
+          //language=hcl
           hcl(
-
             """
-            config = {
-              app_deployment = {
-                cluster_name = "app-cluster"
+              config = {
+                app_deployment = {
+                  cluster_name = "app-cluster"
+                }
               }
-            }
-            """,
+              """,
             """
-            config = {
-              app_deployment = {
-                cluster_name = "new-app-cluster"
+              config = {
+                app_deployment = {
+                  cluster_name = "new-app-cluster"
+                }
               }
-            }
-            """
+              """
           )
         );
     }
@@ -55,23 +56,23 @@ class FindAndReplaceLiteralTest implements RewriteTest {
     @Test
     void removeWhenReplaceIsNullOrEmpty() {
         rewriteRun(
-          spec -> spec.recipe( new FindAndReplaceLiteral("prefix-", null, null, null, null, null, null)),
+          spec -> spec.recipe(new FindAndReplaceLiteral("prefix-", null, null, null, null, null, null)),
+          //language=hcl
           hcl(
-
             """
-            config = {
-              app_deployment = {
-                cluster_name = "prefix-app-cluster"
+              config = {
+                app_deployment = {
+                  cluster_name = "prefix-app-cluster"
+                }
               }
-            }
-            """,
+              """,
             """
-            config = {
-              app_deployment = {
-                cluster_name = "app-cluster"
+              config = {
+                app_deployment = {
+                  cluster_name = "app-cluster"
+                }
               }
-            }
-            """
+              """
           )
         );
     }
@@ -79,22 +80,23 @@ class FindAndReplaceLiteralTest implements RewriteTest {
     @Test
     void regexReplace() {
         rewriteRun(
-          spec -> spec.recipe( new FindAndReplaceLiteral(".", "a", true, null, null, null, null)),
+          spec -> spec.recipe(new FindAndReplaceLiteral(".", "a", true, null, null, null, null)),
+          //language=hcl
           hcl(
             """
-            config = {
-              app_deployment = {
-                cluster_name = "app-cluster"
+              config = {
+                app_deployment = {
+                  cluster_name = "app-cluster"
+                }
               }
-            }
-            """,
+              """,
             """
-            config = {
-              app_deployment = {
-                cluster_name = "aaaaaaaaaaa"
+              config = {
+                app_deployment = {
+                  cluster_name = "aaaaaaaaaaa"
+                }
               }
-            }
-            """
+              """
           )
         );
     }
@@ -102,22 +104,23 @@ class FindAndReplaceLiteralTest implements RewriteTest {
     @Test
     void captureGroupsReplace() {
         rewriteRun(
-          spec -> spec.recipe( new FindAndReplaceLiteral("old-([^.]+)", "new-$1", true, null, null, null, null)),
+          spec -> spec.recipe(new FindAndReplaceLiteral("old-([^.]+)", "new-$1", true, null, null, null, null)),
+          //language=hcl
           hcl(
             """
-            config = {
-              app_deployment = {
-                cluster_name = "old-app-cluster"
+              config = {
+                app_deployment = {
+                  cluster_name = "old-app-cluster"
+                }
               }
-            }
-            """,
+              """,
             """
-            config = {
-              app_deployment = {
-                cluster_name = "new-app-cluster"
+              config = {
+                app_deployment = {
+                  cluster_name = "new-app-cluster"
+                }
               }
-            }
-            """
+              """
           )
         );
     }
@@ -125,22 +128,23 @@ class FindAndReplaceLiteralTest implements RewriteTest {
     @Test
     void noRecursiveReplace() {
         rewriteRun(
-          spec -> spec.recipe( new FindAndReplaceLiteral("app", "application", null, null, null, null, null)),
+          spec -> spec.recipe(new FindAndReplaceLiteral("app", "application", null, null, null, null, null)),
+          //language=hcl
           hcl(
             """
-            config = {
-              app_deployment = {
-                cluster_name = "app-cluster"
+              config = {
+                app_deployment = {
+                  cluster_name = "app-cluster"
+                }
               }
-            }
-            """,
+              """,
             """
-            config = {
-              app_deployment = {
-                cluster_name = "application-cluster"
+              config = {
+                app_deployment = {
+                  cluster_name = "application-cluster"
+                }
               }
-            }
-            """
+              """
           )
         );
     }
@@ -148,22 +152,23 @@ class FindAndReplaceLiteralTest implements RewriteTest {
     @Test
     void compatibleWithDollarSigns() {
         rewriteRun(
-          spec -> spec.recipe( new FindAndReplaceLiteral("$${app-cluster}", "$${new-app-cluster}", null, null, null, null, null)),
+          spec -> spec.recipe(new FindAndReplaceLiteral("$${app-cluster}", "$${new-app-cluster}", null, null, null, null, null)),
+          //language=hcl
           hcl(
             """
-            config = {
-              app_deployment = {
-                cluster_name = "$${app-cluster}"
+              config = {
+                app_deployment = {
+                  cluster_name = "$${app-cluster}"
+                }
               }
-            }
-            """,
+              """,
             """
-            config = {
-              app_deployment = {
-                cluster_name = "$${new-app-cluster}"
+              config = {
+                app_deployment = {
+                  cluster_name = "$${new-app-cluster}"
+                }
               }
-            }
-            """
+              """
           )
         );
     }
@@ -172,14 +177,15 @@ class FindAndReplaceLiteralTest implements RewriteTest {
     void doesNotReplaceStringTemplate() {
         rewriteRun(
           spec -> spec.recipe(new FindAndReplaceLiteral("app-name", "new-app-name", null, null, null, null, null)),
+          //language=hcl
           hcl(
             """
-            config = {
-              app_deployment = {
-                cluster_name = "old-${app-name}-cluster"
+              config = {
+                app_deployment = {
+                  cluster_name = "old-${app-name}-cluster"
+                }
               }
-            }
-            """
+              """
           )
         );
     }
@@ -188,14 +194,15 @@ class FindAndReplaceLiteralTest implements RewriteTest {
     void doesNothingIfLiteralNotFound() {
         rewriteRun(
           spec -> spec.recipe(new FindAndReplaceLiteral("hello", "goodbye", null, null, null, null, null)),
+          //language=hcl
           hcl(
             """
-            config = {
-              app_deployment = {
-                cluster_name = "app-cluster"
+              config = {
+                app_deployment = {
+                  cluster_name = "app-cluster"
+                }
               }
-            }
-            """
+              """
           )
         );
     }
@@ -204,14 +211,15 @@ class FindAndReplaceLiteralTest implements RewriteTest {
     void doesNotReplaceVariableNames() {
         rewriteRun(
           spec -> spec.recipe(new FindAndReplaceLiteral("app_deployment", "replacement_deployment_name", null, null, null, null, null)),
+          //language=hcl
           hcl(
             """
-            config = {
-              app_deployment = {
-                cluster_name = "app-cluster"
+              config = {
+                app_deployment = {
+                  cluster_name = "app-cluster"
+                }
               }
-            }
-            """
+              """
           )
         );
     }
@@ -219,24 +227,25 @@ class FindAndReplaceLiteralTest implements RewriteTest {
     @Test
     void replacesNumericLiterals() {
         rewriteRun(
-          spec -> spec.recipe( new FindAndReplaceLiteral("2", "1",null, null, null, null, null)),
+          spec -> spec.recipe(new FindAndReplaceLiteral("2", "1", null, null, null, null, null)),
+          //language=hcl
           hcl(
             """
-            config = {
-              app_deployment = {
-                cluster_name = "app-cluster"
-                app_replica = 2
+              config = {
+                app_deployment = {
+                  cluster_name = "app-cluster"
+                  app_replica = 2
+                }
               }
-            }
-            """,
+              """,
             """
-            config = {
-              app_deployment = {
-                cluster_name = "app-cluster"
-                app_replica = 1
+              config = {
+                app_deployment = {
+                  cluster_name = "app-cluster"
+                  app_replica = 1
+                }
               }
-            }
-            """
+              """
           )
         );
     }
@@ -257,7 +266,7 @@ class FindAndReplaceLiteralTest implements RewriteTest {
 
         @Override
         public List<Recipe> getRecipeList() {
-            return Arrays.asList(
+            return List.of(
               new FindAndReplaceLiteral("cluster-1", "cluster-2", null, null, null, null, null),
               new FindAndReplaceLiteral("cluster-2", "cluster-3", null, null, null, null, null),
               new FindAndReplaceLiteral("cluster-3", "cluster-4", null, null, null, null, null)
@@ -269,21 +278,22 @@ class FindAndReplaceLiteralTest implements RewriteTest {
     void successiveReplacement() {
         rewriteRun(
           spec -> spec.recipe(new MultiFindAndReplaceLiteral()),
+          //language=hcl
           hcl(
             """
-            config = {
-              app_deployment = {
-                cluster_name = "cluster-1"
+              config = {
+                app_deployment = {
+                  cluster_name = "cluster-1"
+                }
               }
-            }
-            """,
+              """,
             """
-            config = {
-              app_deployment = {
-                cluster_name = "cluster-4"
+              config = {
+                app_deployment = {
+                  cluster_name = "cluster-4"
+                }
               }
-            }
-            """
+              """
           )
         );
     }
